--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-orbit-component": "^0.0.7",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
