--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -49,14 +49,29 @@ jobs:
             org.opencontainers.image.source=${{ github.repositoryUrl }}
             org.opencontainers.image.revision=${{ github.sha }}
 
-  request_deployment:
-    name: Request Deployment
+  auto_update_manifest:
+    name: Auto Update Manifest
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
-      - name: Create a deployment request
-        run: echo "A new image has been built. To deploy, run the workflow manually with the tag '${{ needs.build.outputs.image_tag }}'."
+      - name: Checkout manifest repository
+        uses: actions/checkout@v4
+        with:
+          repository: Aerialink-psfss/psfss-k8s-manifest
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          ref: main
+
+      - name: Update image tag in values.yaml
+        run: |
+          sed -i 's|^\( *tag: \).*|\1${{ needs.build.outputs.image_tag }}|' service/dev/frontend/values.yaml
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git commit -am "Update frontend image tag to ${{ needs.build.outputs.image_tag }}"
+          git push
 
   deploy:
     name: Deploy to Kubernetes
@@ -69,20 +84,17 @@ jobs:
       - name: Checkout manifest repository
         uses: actions/checkout@v4
         with:
-          repository: ${{ secrets.MANIFEST_REPO }} # e.g., 'your-org/k8s-manifests'
-          token: ${{ secrets.MANIFEST_REPO_PAT }} # A PAT with repo write access
+          repository: Aerialink-psfss/psfss-k8s-manifest
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          ref: main
 
-      - name: Update image tag in manifest
+      - name: Update image tag in values.yaml
         run: |
-          # This example uses sed to update the image tag in a Kubernetes manifest.
-          # You may need to adjust this depending on your manifest structure (e.g., using kustomize, helm, etc.)
-          sed -i' "s|image: ${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/psfss-frontend/psfss-frontend:.*|image: ${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/psfss-frontend/psfss-frontend:${{ github.event.inputs.image_tag }}|g" path/to/your/deployment.yaml
+          sed -i 's|^\( *tag: \).*|\1${{ github.event.inputs.image_tag }}|' service/prod/frontend/values.yaml
 
       - name: Commit and push changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git commit -am "Deploy image ${{ github.event.inputs.image_tag }} for psfss-frontend"
+          git commit -am "Update frontend image tag to ${{ github.event.inputs.image_tag }}"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.MANIFEST_REPO_PAT }}
