--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - cicd
     tags:
       - 'v*'
   workflow_dispatch:
@@ -56,18 +57,19 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout manifest repository
-        uses: actions/checkout@v4
+        uses: webfactory/ssh-agent@v0.9.0
         with:
-          repository: git@github.com:Aerialink-psfss/psfss-k8s-manifest.git
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
-          ref: main
-
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+      - run: git clone git@github.com:Aerialink-psfss/psfss-k8s-manifest.git
+      
       - name: Update image tag in values.yaml
         run: |
+          cd psfss-k8s-manifest
           sed -i 's|^\( *tag: \).*|\1${{ needs.build.outputs.image_tag }}|' service/dev/frontend/values.yaml
 
       - name: Commit and push changes
         run: |
+          cd psfss-k8s-manifest
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git commit -am "Update frontend image tag to ${{ needs.build.outputs.image_tag }}"
@@ -82,18 +84,19 @@ jobs:
       name: production
     steps:
       - name: Checkout manifest repository
-        uses: actions/checkout@v4
+        uses: webfactory/ssh-agent@v0.9.0
         with:
-          repository: git@github.com:Aerialink-psfss/psfss-k8s-manifest.git
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
-          ref: main
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+      - run: git clone git@github.com:Aerialink-psfss/psfss-k8s-manifest.git
 
       - name: Update image tag in values.yaml
         run: |
+          cd psfss-k8s-manifest
           sed -i 's|^\( *tag: \).*|\1${{ github.event.inputs.image_tag }}|' service/prod/frontend/values.yaml
 
       - name: Commit and push changes
         run: |
+          cd psfss-k8s-manifest
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git commit -am "Update frontend image tag to ${{ github.event.inputs.image_tag }}"
