--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -54,7 +54,7 @@ jobs:
     name: Auto Update Manifest
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.event_name == 'push'
     steps:
       - name: Checkout manifest repository
         uses: webfactory/ssh-agent@v0.9.0
