--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -57,19 +57,18 @@ jobs:
     if: github.event_name == 'push'
     steps:
       - name: Checkout manifest repository
-        uses: webfactory/ssh-agent@v0.9.0
+        uses: actions/checkout@v4
         with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-      - run: git clone git@github.com:Aerialink-psfss/psfss-k8s-manifest.git
-      
+          repository: Aerialink-psfss/psfss-k8s-manifest
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          ref: main
+
       - name: Update image tag in values.yaml
         run: |
-          cd psfss-k8s-manifest
           sed -i 's|^\( *tag: \).*|\1${{ needs.build.outputs.image_tag }}|' service/dev/frontend/values.yaml
 
       - name: Commit and push changes
         run: |
-          cd psfss-k8s-manifest
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git commit -am "Update frontend image tag to ${{ needs.build.outputs.image_tag }}"
@@ -84,19 +83,18 @@ jobs:
       name: production
     steps:
       - name: Checkout manifest repository
-        uses: webfactory/ssh-agent@v0.9.0
+        uses: actions/checkout@v4
         with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-      - run: git clone git@github.com:Aerialink-psfss/psfss-k8s-manifest.git
+          repository: Aerialink-psfss/psfss-k8s-manifest
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          ref: main
 
       - name: Update image tag in values.yaml
         run: |
-          cd psfss-k8s-manifest
           sed -i 's|^\( *tag: \).*|\1${{ github.event.inputs.image_tag }}|' service/prod/frontend/values.yaml
 
       - name: Commit and push changes
         run: |
-          cd psfss-k8s-manifest
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git commit -am "Update frontend image tag to ${{ github.event.inputs.image_tag }}"
